--- a/web/module/transaction/transaction-admin.html
+++ b/web/module/transaction/transaction-admin.html
@@ -14,6 +14,7 @@
             <img src="/web/assets/logo-jti.png">
             <div class="title">JTI Polinema</div> 
         </div>
+
         <ul>
             <li>
                 <a href="dashboard.html">
@@ -61,6 +62,7 @@
                 </a>
             </li>
         </ul>
+
         <div class="logout">
             <a href="#">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -81,6 +83,7 @@
                 Transaction
             </div>
         </div>
+
         <div class="container">
             <div class="transaction">
                 <form class="transaction-control" action="">
@@ -91,13 +94,24 @@
                         </svg>
                         <input type="text" name="search" class="searchbox" placeholder="Search">
                     </div>
-                    <div class="filter">
-                        <input type="radio" name="date-filter" id="today" class="filter-option" checked> 
-                        <label for="today" class="filter-label">Today</label>
-                        <input type="radio" name="date-filter" id="week" class="filter-option">
-                        <label for="week" class="filter-label">Week</label>
-                        <input type="radio" name="date-filter" id="month" class="filter-option">
-                        <label for="month" class="filter-label">Month</label>
+
+                    <div class="control">
+                        <div id="filter" class="filter">
+                            <input type="radio" name="date-filter" id="today" class="filter-option" checked> 
+                            <label for="today" class="filter-label">Today</label>
+                            <input type="radio" name="date-filter" id="week" class="filter-option">
+                            <label for="week" class="filter-label">Week</label>
+                            <input type="radio" name="date-filter" id="month" class="filter-option">
+                            <label for="month" class="filter-label">Month</label>
+                        </div>
+
+                        <button class="btn-add">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 10H15" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M10 15V5" stroke="#1B1B1B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            Add Transaction
+                        </button>
                     </div>
                 </form>
 
@@ -120,7 +134,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -128,7 +142,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -136,7 +150,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -144,7 +158,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -152,7 +166,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -160,7 +174,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -168,7 +182,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -176,7 +190,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -184,7 +198,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -192,7 +206,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -200,7 +214,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                          </tr>
                         <tr>
                             <td>#00001234</td>
@@ -208,7 +222,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -216,7 +230,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                         <tr>
                             <td>#00001234</td>
@@ -224,7 +238,7 @@
                             <td>04-10-2023</td>
                             <td>04-10-2023</td>
                             <td>IDR 50.000,00</td>
-                            <td><button class="seedetail" onclick="openModal()">See Detail</button></td>
+                            <td><button class="seedetail" onclick="openDetail()">See Detail</button></td>
                         </tr>
                     </tbody>
                 </table>
@@ -232,9 +246,9 @@
         </div>
     </div>
 
-    <div id="modal" class="modal-transaction">
-        <div class="modal-container">
-            <div class="modal-header">
+    <div id="modal-seedetail" class="modal-seedetail">
+        <div class="detail-container">
+            <div class="detail-header">
                 Detail Transaction
             </div>
 
@@ -285,7 +299,7 @@
                 <p>IDR <span>10.000,00</span></p>
             </div>
 
-            <button id="close-modal" class="modal-button" onclick="closeModal()">Close</button>
+            <button id="close-seedetail" class="btn-close-detail" onclick="closeDetail()">Close</button>
         </div>
     </div>
 
